--- a/views/login.dust
+++ b/views/login.dust
@@ -1,7 +1,11 @@
 {>"layouts/default" /}
 {<body}
-	<h1>Test</h1>
-	<div id="counter" class="center-block"></div>
+<div class="row">
+	<div class="row">
+		<div class="col-md-3" id="timetable"></div>
+		<div class="col-md-9" id="counter"></div>
+	</div>
+</div>
 {/body}
 {<scripts}
 	<script type="text/javascript" src="/static/js/counter.min.js"></script>
