--- a/src/less/style/app.less
+++ b/src/less/style/app.less
@@ -1,21 +1,21 @@
 #wrapper{
 }
-#counter{
+#counter_container{
 	text-align:center;
 	font-weight: 100;
 	font-family: 'Exo2',Roboto,Helvetica,sans-serif;
 }
-#counter .week_counter{
+#counter_container .week_counter{
 	font-size: 2vw;
 }
 
-#counter .subject_counter{
+#counter_container .subject_counter{
 	font-size: 7vw;
 }
-#counter .in_counter{
+#counter_container .in_counter{
 	font-size:2vw;
 }
-#counter .time_counter{
+#counter_container .time_counter{
 	color: #123FED;
 	font-size: 11vw;
 }
